# QAGURU_poetry_hw16

auto/: pyproject.toml
