[project]
name = "auto"
version = "0.1.0"
description = ""
authors = [
    {name = "MozzhukhinRA",email = "roma.moz@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "selene (==2.0.0rc9)",
    "selenium (==4.12.0)",
    "pytest (==7.3.1)"
]

[tool.poetry]
packages = [{include = "auto", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=3.3.8,<4.0.0)"
]
